# udacity-churn-prediction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  churn_library.py  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json.example
customer_churn_prediction/: __init__.py  churn_library.py
customer_churn_prediction/utils/: __init__.py  config.py  logger.py
models/: logistic_regression.pkl
scripts/: churn_script_logging_and_tests.py
tests/: conftest.py
tests/unit/customer_churn_prediction/: test_churn_library.py
