[tool.poetry]
name = "udacity-churn-prediction"
version = "0.1.0"
description = "This is the first project Predict Customer Churn of the ML DevOps Engineer Nanodegree from Udacity."
authors = ["Lukas Heidegger <hi@lukasjh.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.0"
shap = "^0.44.1"
joblib = "^1.3.2"
pandas = "^2.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
ruff = "^0.1.3"
pyright = "^1.1.350"
bump-pydantic = "^0.8.0"
notebook = "^7.0.8"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
typeCheckingMode = "basic"

[tool.ruff]
select = ["D", "E", "F", "I", "C90"]
fixable = ["I"]

line-length = 100
pydocstyle.convention = "google"